<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/app_bar_search"
        android:icon="@drawable/ic_search_black_24dp"
        android:title="Search"
        app:actionViewClass="android.widget.SearchView" />
    <item
        android:id="@+id/app_bar_switch"
        android:title="Switch"
        app:actionLayout="@layout/switch_item" />
    <item
        android:id="@+id/subject1"
        android:title="@string/subject1" />
    <item
        android:id="@+id/subject2"
        android:title="@string/subject2" />
    <item
        android:id="@+id/subject3"
        android:title="@string/subject3" />
    <item
        android:id="@+id/subject4"
        android:title="@string/subject4" />
</menu>